opam-version: "2.0"
version: "8.12.dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/lukaszcz/coqhammer"
dev-repo: "git+https://github.com/lukaszcz/coqhammer.git"
bug-reports: "https://github.com/lukaszcz/coqhammer/issues"
license: "LGPL-2.1-only"

synopsis: "Reconstruction tactics for the hammer for Coq"
description: """
Collection of tactics that are used by the hammer for Coq
to reconstruct proofs found by automated theorem provers. When the hammer
has been successfully applied to a project, only this package needs
to be installed; the hammer plugin is not required.
"""

build: [make "-j%{jobs}%" {ocaml:version >= "4.06"} "tactics"]
install: [
  [make "install-tactics"]
  [make "test-tactics"] {with-test}
]
depends: [
  "ocaml"
  "coq" {>= "8.12" & < "8.13~"}
]

tags: [
  "keyword:automation"
  "keyword:hammer"
  "keyword:tactics"
  "logpath:Hammer.Tactics"
]

authors: [
  "Lukasz Czajka <lukaszcz@mimuw.edu.pl>"
]
