opam-version: "2.0"
version: "dev"
maintainer: "palmskog@gmail.com"

homepage: "https://github.com/lukaszcz/coqhammer"
dev-repo: "git+https://github.com/lukaszcz/coqhammer.git"
bug-reports: "https://github.com/lukaszcz/coqhammer/issues"
license: "LGPL-2.1-only"

synopsis: "General-purpose automated reasoning hammer tool for Coq"
description: """
A general-purpose automated reasoning hammer tool for Coq that combines
learning from previous proofs with the translation of problems to the
logics of automated systems and the reconstruction of successfully found proofs.
"""

build: [make "-j%{jobs}%" "plugin"]
install: [make "install-plugin"]
depends: [
  "ocaml"
  "coq" {= "dev"}
  "conf-g++" {build}
  "coq-hammer-tactics" {= version}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "keyword:automation"
  "keyword:hammer"
  "logpath:Hammer"
]

authors: [
  "Lukasz Czajka <lukaszcz@mimuw.edu.pl>"
  "Cezary Kaliszyk <cezary.kaliszyk@uibk.ac.at>"
  "Burak Ekici <burak.ekici@uibk.ac.at>"
]
